force-app/main/default/objects/Delivery_Note__c/Delivery_Note__c.object-meta.xml
<CustomObject>
    <label>Delivery Note Item</label>
    <nameField>
        <displayFormat>DN-{000000}</displayFormat>
        <label>Delivery Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>