force-app/main/default/objects/Delivery_Note__c/fields/Auto_Issue_Consignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Issue_Consignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Issue Consignment?</label>
    <type>Checkbox</type>
</CustomField>