force-app/main/default/objects/Delivery_Note__c/fields/Auto_ZARA_Issue_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Auto_ZARA_Issue_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Auto ZARA Issue Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>