force-app/main/default/objects/Delivery_Note__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>