force-app/main/default/objects/Delivery_Note__c/fields/Creator_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Creator_Delivery__c</fullName>
    <label>Delivery Note Creator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>