force-app/main/default/objects/Delivery_Note__c/fields/Creator_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Creator_Delivery_Date__c</fullName>
    <label>Delivery Note Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>