force-app/main/default/objects/Delivery_Note__c/fields/Days_after_delivery__c.field-meta.xml
<CustomField>
    <fullName>Days_after_delivery__c</fullName>
    <formula>TODAY() -  Delivery_Post_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>