force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Amount__c</fullName>
    <label>Delivery Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>