force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Cost__c</fullName>
    <label>Delivery Cost(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>