force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Note_Num__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Num__c</fullName>
    <label>SAP Delivery Note Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>