force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Number</label>
    <referenceTo>DeliveryNumber__c</referenceTo>
    <relationshipName>Delivery_Note</relationshipName>
    <type>Lookup</type>
</CustomField>