force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Post_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Post_Status__c</fullName>
    <label>Delivery Post Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Post_Status</valueSetName>
    </valueSet>
</CustomField>