force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Quantity_Delivery_Unit__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity_Delivery_Unit__c</fullName>
    <label>Delivery Quantity(Delivery Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>