force-app/main/default/objects/Delivery_Note__c/fields/Delivery_Unit__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Unit__c</fullName>
    <label>Delivery Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>