force-app/main/default/objects/Delivery_Note__c/fields/Estimated_invoicing_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_invoicing_date__c</fullName>
    <formula>Delivery_Post_Date__c + VALUE(TEXT(Order__r.Stock_Aging_Limit__c)) +2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated invoicing date</label>
    <type>Date</type>
</CustomField>