force-app/main/default/objects/Delivery_Note__c/fields/Is_Note__c.field-meta.xml
<CustomField>
    <fullName>Is_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Sent Email</label>
    <type>Checkbox</type>
</CustomField>