force-app/main/default/objects/Delivery_Note__c/fields/Issue_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Used Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>