force-app/main/default/objects/Delivery_Note__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>