force-app/main/default/objects/Delivery_Note__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order Number</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Delivery_Note1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>