force-app/main/default/objects/Delivery_Note__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item Number</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipName>Delivery_Note</relationshipName>
    <type>Lookup</type>
</CustomField>