force-app/main/default/objects/Delivery_Note__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>TEXT( Order__r.Order_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>