force-app/main/default/objects/Delivery_Note__c/fields/POD_Status__c.field-meta.xml
<CustomField>
    <fullName>POD_Status__c</fullName>
    <label>POD Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>