force-app/main/default/objects/Delivery_Note__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>CASESAFEID(Order_Item__r.Commodity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>