force-app/main/default/objects/Delivery_Note__c/fields/Product_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Text__c</fullName>
    <formula>Order_Item__r.Commodity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>