force-app/main/default/objects/Delivery_Note__c/fields/Reference_Order__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order__c</fullName>
    <label>Reference Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>