force-app/main/default/objects/Delivery_Note__c/fields/Remain_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remain_Quantity__c</fullName>
    <formula>Delivery_Quantity__c  -  Issue_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remain Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>