force-app/main/default/objects/Delivery_Note__c/fields/Stock_Aging_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Stock_Aging_Countdown__c</fullName>
    <formula>IF(
ISBLANK( Delivery_Post_Date__c ),
NULL,
IF(
TODAY() - (Delivery_Post_Date__c + 2) &lt;= 0  &amp;&amp; ISPICKVAL(Delivery_Post_Status__c  , &apos;C&apos;) ,
  VALUE( TEXT(Order__r.Stock_Aging_Limit__c) ) ,
VALUE( TEXT(Order__r.Stock_Aging_Limit__c) )- (TODAY() - (Delivery_Post_Date__c + 2))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order&apos;s Stock Aging Limit - (TODAY - (Delivery Post Date + 2))</inlineHelpText>
    <label>Stock Aging Countdown(days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>