force-app/main/default/objects/Delivery_Note__c/fields/Stock_Aging_CountdownBatch__c.field-meta.xml
<CustomField>
    <fullName>Stock_Aging_CountdownBatch__c</fullName>
    <label>*Stock Aging Countdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>