force-app/main/default/objects/Delivery_Note__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Storage_Location</valueSetName>
    </valueSet>
</CustomField>